fixup! ISSUE-1381 Push contacts to Sabre via DAV